# fainder

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml
analysis/: accuracy_benchmark.ipynb  binsort_benchmark.ipynb  exact_results.ipynb  histogram_heterogeneity.ipynb  microbenchmarks.ipynb  poster.ipynb  query_metrics.ipynb  runtime_benchmark.ipynb  scalability_benchmark.ipynb  talk.ipynb
analysis/utils/: plotting_defaults.py
data/llm_workload/: README.md  llm_queries.zst  parse_responses.py  prompt.txt  responses.txt
data/llm_workload/raw_responses/: claude-3-opus-20240229.txt  claude-3-sonnet-20240229.txt  command-r-plus.txt  gemini-1.5-pro-api-0409-preview.txt  gpt-4-1106-preview.txt  gpt-4-turbo-2024-04-09.txt  llama-3-70b-instruct.txt
experiments/: accuracy_benchmark.sh  benchmark_accuracy.sh  benchmark_construction.sh  benchmark_exact.sh  benchmark_parameters.sh  benchmark_runtime.sh  benchmark_scalability.sh  binsort_benchmark.sh  collate_benchmark_queries.py  compute_binsort_results.py  compute_exact_results.py  compute_fainder_results.py  compute_ndist_results.py  compute_pscan_results.py  exact_results.sh  microbenchmarks.sh  plot_results.py  run_all.sh  runtime_benchmark.sh  scalability_benchmark.sh  setup.sh
fainder/: typing.py  utils.py
fainder/data/: distributions.py  downloader.py  histograms.py  parquet_conversion.py
fainder/execution/: baselines.py  new_runner.py  percentile_queries.py  runner.py  runner_exact.py  runner_single.py
fainder/preprocessing/: binsort.py  clustering.py  filtering.py  percentile_index.py
fainder/queries/: generator.py
fainder/validation/: index_correctness.py  index_equality.py  query_metrics.py  result_accuracy.py
logs/accuracy_benchmark/baseline_comp/: gittables-binsort-high_selectivity.zst  gittables-binsort-low_selectivity.zst  gittables-binsort-mid_selectivity.zst  gittables-conversion-high_selectivity.zst  gittables-conversion-low_selectivity.zst  gittables-conversion-mid_selectivity.zst  gittables-exact-high_selectivity.zst  gittables-exact-low_selectivity.zst  gittables-exact-mid_selectivity.zst  gittables-ndist-high_selectivity.zst  gittables-ndist-low_selectivity.zst  gittables-ndist-mid_selectivity.zst  gittables-pscan-high_selectivity.zst  gittables-pscan-low_selectivity.zst  gittables-pscan-mid_selectivity.zst  gittables-rebinning-high_selectivity.zst  gittables-rebinning-low_selectivity.zst  gittables-rebinning-mid_selectivity.zst  open_data_usa-binsort-high_selectivity.zst  open_data_usa-binsort-low_selectivity.zst  open_data_usa-binsort-mid_selectivity.zst  open_data_usa-conversion-high_selectivity.zst  open_data_usa-conversion-low_selectivity.zst  open_data_usa-conversion-mid_selectivity.zst  open_data_usa-exact-high_selectivity.zst  open_data_usa-exact-low_selectivity.zst  open_data_usa-exact-mid_selectivity.zst  open_data_usa-ndist-high_selectivity.zst  open_data_usa-ndist-low_selectivity.zst  open_data_usa-ndist-mid_selectivity.zst  open_data_usa-pscan-high_selectivity.zst  open_data_usa-pscan-low_selectivity.zst  open_data_usa-pscan-mid_selectivity.zst  open_data_usa-rebinning-high_selectivity.zst  open_data_usa-rebinning-low_selectivity.zst  open_data_usa-rebinning-mid_selectivity.zst  sportstables-binsort-high_selectivity.zst  sportstables-binsort-low_selectivity.zst  sportstables-binsort-mid_selectivity.zst  sportstables-conversion-high_selectivity.zst  (+14 more)
logs/accuracy_benchmark/grid_search/: gittables-conversion-001-kmeans-k113-b50000-quantile-a0-high_selectivity.zst  gittables-conversion-001-kmeans-k113-b50000-quantile-a0-low_selectivity.zst  gittables-conversion-001-kmeans-k113-b50000-quantile-a0-mid_selectivity.zst  gittables-conversion-002-kmeans-k113-b50000-quantile-a1-high_selectivity.zst  gittables-conversion-002-kmeans-k113-b50000-quantile-a1-low_selectivity.zst  gittables-conversion-002-kmeans-k113-b50000-quantile-a1-mid_selectivity.zst  gittables-conversion-003-kmeans-k113-b50000-quantile-a5-high_selectivity.zst  gittables-conversion-003-kmeans-k113-b50000-quantile-a5-low_selectivity.zst  gittables-conversion-003-kmeans-k113-b50000-quantile-a5-mid_selectivity.zst  gittables-conversion-004-kmeans-k113-b100000-quantile-a0-high_selectivity.zst  gittables-conversion-004-kmeans-k113-b100000-quantile-a0-low_selectivity.zst  gittables-conversion-004-kmeans-k113-b100000-quantile-a0-mid_selectivity.zst  gittables-conversion-005-kmeans-k113-b100000-quantile-a1-high_selectivity.zst  gittables-conversion-005-kmeans-k113-b100000-quantile-a1-low_selectivity.zst  gittables-conversion-005-kmeans-k113-b100000-quantile-a1-mid_selectivity.zst  gittables-conversion-006-kmeans-k113-b100000-quantile-a5-high_selectivity.zst  (+752 more)
logs/exact_results/: gittables-1.zst  gittables-2.zst  gittables-3.zst  gittables-4.zst  gittables-5.zst  gittables-binsort-1.zst  gittables-binsort-2.zst  gittables-binsort-3.zst  gittables-binsort-4.zst  gittables-binsort-5.zst  gittables-pscan-1.zst  gittables-pscan-2.zst  gittables-pscan-3.zst  gittables-pscan-4.zst  gittables-pscan-5.zst  open_data_usa-1.zst  open_data_usa-2.zst  open_data_usa-3.zst  open_data_usa-4.zst  open_data_usa-5.zst  open_data_usa-binsort-1.zst  open_data_usa-binsort-2.zst  open_data_usa-binsort-3.zst  open_data_usa-binsort-4.zst  open_data_usa-binsort-5.zst  open_data_usa-pscan-1.zst  open_data_usa-pscan-2.zst  open_data_usa-pscan-3.zst  open_data_usa-pscan-4.zst  open_data_usa-pscan-5.zst  sportstables-1.zst  sportstables-2.zst  sportstables-3.zst  sportstables-4.zst  sportstables-5.zst  sportstables-binsort-1.zst  sportstables-binsort-2.zst  sportstables-binsort-3.zst  sportstables-binsort-4.zst  sportstables-binsort-5.zst  (+5 more)
logs/query_metrics/: gittables-metrics.zst  open_data_usa-metrics.zst  sportstables-metrics.zst
tex/: README.md  main.tex
tex/bib/: references.bib  settings.tex
tex/sections/: 00_abstract.tex  01_introduction.tex  02_preliminaries.tex  03_problem.tex  04_index.tex  05_evaluation.tex  06_related_work.tex  07_conclusion.tex
(+2051 files in other folders)
